--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "@ffmpeg/ffmpeg": "^0.10.1",
     "@forlagshuset/simple-fs": "^0.5.0",
+    "antd": "^4.20.0",
     "core-js": "^3.18.0",
+    "date-fns": "^2.28.0",
     "duration-time-conversion": "^1.0.5",
     "lodash": "^4.17.21",
     "normalize.css": "^8.0.1",
